[package]
name = "serde_yaml"
version = "0.9.36"
authors = [
  "David Tolnay <dtolnay@gmail.com>",
  "Klimenty Titov <aclo.create@gmail.com>",
]
categories = ["encoding", "parser-implementations"]
description = "YAML data format for Serde"
documentation = "https://docs.rs/serde_yaml/"
edition = "2024"
keywords = ["yaml", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/markcda/serde-yaml"

[features]
default = ["pretty"]
pretty = ["dep:pretty_yaml"]

[dependencies]
indexmap = "2.2.1"
itoa = "1.0"
pretty_yaml = { optional = true, version = "0.5" }
ryu = "1.0"
serde = "1.0.195"
unsafe-libyaml = { git = "https://github.com/markcda/unsafe-libyaml.git" }

[dev-dependencies]
anyhow = "1.0.79"
indoc = "2.0"
serde_derive = "1.0.195"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
